--- a/app/views/comedians/index.erb
+++ b/app/views/comedians/index.erb
@@ -1,5 +1,16 @@
 <h1>All Comedians</h1>
 
+<h2>Statistics<h2>
+  <h3>Average Age</h3>
+  <%= @comedians.avg_age %> years old
+  <h3>Average TV Special Run Time</h3>
+  <%= @specials.avg_run %> minutes
+  <h3>Cities</h3>
+  <% @comedians.each do |c| %>
+    <%= c.city %>
+  <% end %>
+
+
 <% @comedians.each do |c| %>
   <ul>
     <li>Comedian: <%= c.name %></li>
