--- a/app/views/comedians/index.erb
+++ b/app/views/comedians/index.erb
@@ -1,5 +1,8 @@
 <h1>All Comedians</h1>
 
+<a href="/comedians/new">Add Comedian</a>
+
+
 <h2>Statistics<h2>
   <h3>Average Age</h3>
     <div id='av_age'>
@@ -13,21 +16,24 @@
       <%= @specials.total_specials %> specials
 
     <h3>Cities</h3>
+      <div id=
       <% @cities.each do |city| %>
         <%= city %>
       <% end %>
 
+
 <% @comedians.each do |c| %>
   <ul>
-    <div id="comic">
+    <div id=<%= "comic-#{c.id}" %>>
       <li>Comedian: <%= c.name %></li>
       <li>Age: <%= c.age %></li>
       <li>City: <%= c.city %>
+      <li>Specials: <%= c.com_specs %>
         <div id="specials">
           <% c.specials.each do |special| %>
             <li>Special Name: <%= special.name %></li>
             <li>Run Time: <%= special.run_time %> Minutes</li>
-            <img src="<%= special.image_url %>", width="100px">
+            <img src="<%= special.image_url %>">
 
       <% end %>
       </div>
