adds new comdian and saves to database

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-expand-full navbar-dark bg-dark sticky-top">
         <div class="row ml-0 mr-0" id="nav-div-full">
           <div class="col-sm-3 float-sm-left">
-            <a href="/" class="navbar-brand">LaughTracks</a>
+            <a href="/comedians" class="navbar-brand">LaughTracks</a>
           </div>
         </div>
       </nav>
