--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -1,6 +1,6 @@
 <form class="new-comedian" action="/comedians" method="POST">
   <input type="text" name="comedian[name]" placeholder="Name">
-  <input type="text" name="comedian[age]" placeholder="Age">
+  <input type="number" name="comedian[age]" placeholder="Age" step="1" min="1" max="100">
   <input type="text" name="comedian[city]" placeholder="City">
   <input type="submit" value="Submit">
 </form>
