udpates test and logic to push down to model

--- a/app/public/main.css
+++ b/app/public/main.css
@@ -1,6 +1,7 @@
 body {
     background: #30C5FF;
-    background-image: 'mic.jpg';
+    background-image: url('mic.jpg');
+    background-size: auto;
 }
 
 h1 {
