--- a/app/public/main.css
+++ b/app/public/main.css
@@ -1,7 +1,7 @@
 body {
     background: #30C5FF;
-    background-image: url('mic.jpg');
-    background-size: auto;
+    background-image: url('vint.png');
+    background-position: top;
 }
 
 h1 {
@@ -18,4 +18,8 @@ h2 {
 
 img {
   width: 100px;
+}
+
+#card border-dark mb-3 {
+  text-align: center;
 }
