--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -1,23 +1,14 @@
-<form class="new-comedian" action="/comedians" method="POST">
-  <input type="text" name="comedian[name]" placeholder="Name">
-  <input type="number" name="comedian[age]" placeholder="Age" step="1" min="1" max="100">
-  <input type="text" name="comedian[city]" placeholder="City">
-  <input type="submit" value="Submit">
-</form>
-
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<div class="card border-dark mb-3" style="max-width: 40rem;">
+  <div class="card-header">Add New Comedian</div>
+  <div class="card-body text-dark">
+    <h5 class="card-title"></h5>
+    <form class="new-comedian" action="/comedians" method="POST">
+      <input type="text" name="comedian[name]" placeholder="Name">
+      <br>
+      <input type="number" name="comedian[age]" placeholder="Age" step="1" min="1" max="100">
+      <br>
+      <input type="text" name="comedian[city]" placeholder="City">
+      <br>
+      <input type="submit" value="Submit">
+    </form>  </div>
+</div>
