--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,7 @@
         <div class="row ml-0 mr-0" id="nav-div-full">
           <div class="col-sm-3 float-sm-left">
             <a href="/comedians" class="navbar-brand">LaughTracks</a>
+            <a href="/comedians/new" class="navbar-brand">Add Comedian</a>
           </div>
         </div>
       </nav>
