--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -1,14 +1,26 @@
-<div class="card border-dark mb-3" style="max-width: 40rem;">
-  <div class="card-header">Add New Comedian</div>
-  <div class="card-body text-dark">
-    <h5 class="card-title"></h5>
-    <form class="new-comedian" action="/comedians" method="POST">
-      <input type="text" name="comedian[name]" placeholder="Name">
-      <br>
-      <input type="number" name="comedian[age]" placeholder="Age" step="1" min="1" max="100">
-      <br>
-      <input type="text" name="comedian[city]" placeholder="City">
-      <br>
-      <input type="submit" value="Submit">
-    </form>  </div>
+
+<div class="container-2">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+      <div class="card text-white bg-dark mb-3" style="max-width: 30rem;">
+        <div class="card-header">Add New Comedian</div>
+        <div class="card-body text-dark">
+          <h5 class="card-title"></h5>
+          <form class="new-comedian" action="/comedians" method="POST">
+            <input type="text" name="comedian[name]" placeholder="Name">
+            <br>
+            <input type="number" name="comedian[age]" placeholder="Age" step="1" min="1">
+            <br>
+            <input type="text" name="comedian[city]" placeholder="City">
+            <br>
+            <input type="submit" value="Create Comedian">
+          </form>  </div>
+      </div>
+
+    </div>
+    <div class="col-sm">
+    </div>
+  </div>
 </div>
