--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-full navbar-dark bg-dark sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+
         <div class="row ml-0 mr-0" id="nav-div-full">
           <div class="col-sm-3 float-sm-left">
             <a href="/comedians" class="navbar-brand">LaughTracks</a>
