cleans up style fixes id for comedian info

--- a/app/views/comedians/new.erb
+++ b/app/views/comedians/new.erb
@@ -6,7 +6,7 @@
     <div class="col-sm">
       <div class="card text-white bg-dark mb-3" style="max-width: 30rem;">
         <div class="card-header">Add New Comedian</div>
-        <div class="card-body text-dark">
+        <div class="card-body-1 text-dark">
           <h5 class="card-title"></h5>
           <form class="new-comedian" action="/comedians" method="POST">
             <input type="text" name="comedian[name]" placeholder="Name">
