--- a/app/public/main.css
+++ b/app/public/main.css
@@ -12,17 +12,28 @@ h1 {
 }
 
 h2 {
-  color: Black;
+  color: black;
   font-style: italic;
   text-align: center;
 }
 
 h3 {
-  color: white;
+  color: black;
+  text-align: center;
 }
 
 h4 {
   color: blue;
+  text-align: center;
+}
+
+h5 {
+  color: blue;
+  text-align: center;
+}
+
+h6 {
+  color: white;
 }
 
 img {
@@ -33,9 +44,12 @@ img {
   text-align: center;
 }
 
+
 .container-2 {
   margin-top: 50px;
 }
+
+
 
 .card-header {
   text-align: center;
@@ -47,10 +61,12 @@ img {
   font-size: 30px;
 }
 
+
 .jumbotron-fluid {
-  color: blue;
   text-align: center;
-  opacity: 0.5;
+  background-color: #EEF0F0;
+  border-radius: 5%;
+  opacity: 0.7;
 }
 
 .title {
@@ -59,9 +75,25 @@ img {
 
 .card-body {
   background-color: grey;
-  border-radius: 10%;
+  border-radius: 5%;
 }
 
 .card {
-  border-radius: 10%;
+  border-radius: 5%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+li {
+list-style-type:none;
 }
