--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,8 +14,13 @@
         <div class="row ml-0 mr-0" id="nav-div-full">
           <div class="col-sm-3 float-sm-left">
             <a href="/comedians" class="navbar-brand">LaughTracks</a>
-            <a href="/comedians/new" class="navbar-brand">Add Comedian</a>
           </div>
+          <div class="col-sm-9">
+          <ul class="navbar-nav ml-auto float-sm-right">
+            <li class="nav-item">
+              <a class="nav-link" href="/comedians/new">Add Comedian</a>
+            </li>
+          </ul>
         </div>
       </nav>
       <%= yield %>
